kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: k8s-helidon-app-monitoring
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "helidon-monitoring.ochacafe-s5.cf"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
  namespace: k8s-helidon-app-monitoring
spec:
  hosts:
    - "*"
  gateways:
    - k8s-helidon-app-monitoring/app-gateway
  http:
    - route:
        - destination:
            host: k8s-helidon-app
            port:
              number: 80
